bloglarga ajratib chiqdim

--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
   <section class="site-contact">
     <div class="container">
       <div class="site-content__content">
-        <h1 class="site-hero__content-heading">Get in Touch</h1>
+        <h1 class="site-content__heading">Get in Touch</h1>
 
-        <div class="site-hero__content-wrapper">
-          <p class="site-hero__content-text">I’d love to hear about what you’re working on and how I could help. I’m
+        <div class="site-content__wrapper">
+          <p class="site-content__text">I’d love to hear about what you’re working on and how I could help. I’m
             currently looking for a new role and
             am open to a wide range of opportunities. My preference would be to find a position in a company in London.
             But I’m also happy to hear about opportunites that don’t fit that description. I’m a hard-working and
